--- a/index.html
+++ b/index.html
@@ -13,22 +13,27 @@
 	</head>
 	<body>
 		<!-- HEADER SECTION -->
+		<!-- Dengan konsep BEM (Block Element Modifier) -->
+		<!-- 
+			terdiri dari Block header, 
+			block header terdiri dari Element logo dan text
+		-->
 		<header class="header">
-			<div class="logo-box">
-				<img src="./img/logo-white.png" alt="logo" class="logo">
+			<div class="header__logo-box">
+				<img src="./img/logo-white.png" alt="logo" class="header__logo">
 			</div>
 
-			<div class="text-box">
+			<div class="header__text-box">
 				<h1 class="heading-primary">
-					<span class="heading-primary-main">
+					<span class="heading-primary--main">
 						Outdoors
 					</span>
-					<span class="heading-primary-sub">
+					<span class="heading-primary--sub">
 						is here life happens
 					</span>
 				</h1>
 
-				<a href="#" class="btn btn-white btn-animated">Discover our tours</a>
+				<a href="#" class="btn btn--white btn--animated">Discover our tours</a>
 			</div>
 		</header>
 	</body>
