--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 			</div>
 		</header>
 
+		<!--
 		<section class="grid-test">
 			<div class="row">
 				<div class="col-1-of-2">Col 1 Of 2</div>
@@ -72,6 +73,40 @@
 				<div class="col-3-of-4">Col 3 Of 4</div>
 			</div>
 		</section>
+		-->
+
+		<main>
+			<section class="section-about">
+				<div class="u-center-text u-margin-bottom-big">
+					<h2 class="heading-secondary">
+						Exciting tours for adventures people
+					</h2>
+				</div>
+
+				<div class="row">
+					<div class="col-1-of-2">
+						<h3 class="heading-tertiary u-mb-small">You're going to fall in love with nature</h3>
+						<p class="paragraph">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo esse cillum dolore eu fugiat nulla proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						</p>
+
+						<h3 class="heading-tertiary u-mb-small">Live adventure like you newver been before</h3>
+						<p class="paragraph">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+						</p>
+
+						<a href="#" class="btn-text">Learn more &rarr;</a>
+					</div>
+					<div class="col-1-of-2">
+						<div class="composition">
+							<img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+							<img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+							<img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+						</div>
+					</div>
+				</div>
+			</section>
+		</main>
 
 	</body>
 </html>
