--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="css/icon-font.css">
 		<link rel="shorcut icon" type="image/png" href="img/favicon.png">
 
 		<title>Natours | Exciting tour for adventurous people</title>
@@ -106,7 +107,62 @@
 					</div>
 				</div>
 			</section>
-		</main>
 
+			<section class="section-features">
+				<div class="row">
+					<div class="col-1-of-4">
+						<div class="feature-box">
+							<i class="feature-box__icon icon-basic-world"></i>
+
+							<h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
+							<p class="feature-box__text">
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							</p>
+						</div>
+					</div>
+
+					<div class="col-1-of-4">
+						<div class="feature-box">
+							<i class="feature-box__icon icon-basic-compass"></i>
+
+							<h3 class="heading-tertiary u-margin-bottom-small">Meet nature</h3>
+							<p class="feature-box__text">
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							</p>
+						</div>
+					</div>
+
+					<div class="col-1-of-4">
+						<div class="feature-box">
+							<i class="feature-box__icon icon-basic-map"></i>
+
+							<h3 class="heading-tertiary u-margin-bottom-small">Find your way</h3>
+							<p class="feature-box__text">
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							</p>
+						</div>
+					</div>
+
+					<div class="col-1-of-4">
+						<div class="feature-box">
+							<i class="feature-box__icon icon-basic-heart"></i>
+
+							<h3 class="heading-tertiary u-margin-bottom-small">Live a healthier life</h3>
+							<p class="feature-box__text">
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							</p>
+						</div>
+					</div>
+				</div>
+			</section>
+		</main>
 	</body>
 </html>
